test/mutation_analysis/s0032_longest_valid_parentheses/hafis/o3/mutants/29/result.txt
./test/mutation_analysis/s0032_longest_valid_parentheses/hafis/o3/mutants/29/Solution.java:54: error: unreachable statement
        return max;
        ^
1 error
